--- a/templates/forms/recurso-form.html
+++ b/templates/forms/recurso-form.html
@@ -8,6 +8,11 @@
   <div class="container">
     <div class="row mt-3 mb-5">
       <div class="col-md-9 mx-auto">
+          {% if messages %} {% for message in messages %}
+    <div class="alert {{ message.tags }} float-message">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}<strong>ERROR: </strong> {% endif %} {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}<strong>SUCCESS: </strong>        {% endif %} {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}<strong>INFO: </strong> {% endif %} {{ message }}
+    </div>
+    {% endfor %} {% endif %}
             <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
                 <div class="fieldWrapper">
                     {{ form.nombre.errors }}
