--- a/templates/SGRD/busqueda.html
+++ b/templates/SGRD/busqueda.html
@@ -54,8 +54,8 @@
                         </div>
                         <div class="row">
                           {% for tag in recurso.etiquetas_list %}
-                          <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid #{{tag.color}}; border-radius: 10px; width: auto; height: auto; margin-right: 1px;">
-                            <div class="card-body text-center etiqueta-item">
+                          <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid {{tag.color}}; border-radius: 10px; background-color: {{tag.color}}; width: auto; height: auto; margin-right: 1px;">
+                            <div class="card-body text-center etiqueta-item" style="color: #FFF;">
                               {{tag.nombre}}
                             </div>
                           </div>
@@ -97,8 +97,8 @@
                         </div>
                         <div class="row">
                           {% for tag in clip.etiquetas.all %}
-                          <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid #{{tag.color}}; border-radius: 10px; width: auto; height: auto; margin-right: 1px;">
-                            <div class="card-body text-center etiqueta-item">
+                          <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid {{tag.color}}; border-radius: 10px; background-color: {{tag.color}}; width: auto; height: auto; margin-right: 1px;">
+                            <div class="card-body text-center etiqueta-item" style="color: #FFF" >
                               {{tag.nombre}}
                             </div>
                           </div>
