--- a/templates/SGRD/recurso_detail.html
+++ b/templates/SGRD/recurso_detail.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="row">
                   {% for tag in tags %}
-                  <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid #{{tag.color}}; border-radius: 10px; width: auto; height: auto; margin-right: 1px;">
-                    <div class="card-body text-center etiqueta-item">
+                  <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid {{tag.color}}; background-color: {{tag.color}}; border-radius: 10px; width: auto; height: auto; margin-right: 1px;">
+                    <div class="card-body text-center etiqueta-item" style="color: #FFF; font-weight: 400;">
                       {{tag.nombre}}
                     </div>
                   </div>
