--- a/templates/SGRD/planProduccion.html
+++ b/templates/SGRD/planProduccion.html
@@ -66,6 +66,9 @@
   <div class="col-md-2">
     <a class="btnn btn-full" href="{% url 'editar-plan' recurso.id %}"><i class="ion-ios-list-box icon-small"></i>Editar descripción</a>
   </div>
+  <div class="col-md-2">
+    <a class="btnn btn-full" href="{% url 'eliminar-plan' recurso.id %}"><i class="ion-md-trash icon-small"></i>Eliminar plan de producción</a>
+  </div>
   <div class="col-md-7"></div>
 </div>
 {% endblock %}
