--- a/templates/SGRD/planProduccion.html
+++ b/templates/SGRD/planProduccion.html
@@ -67,10 +67,21 @@
     <a class="btnn btn-full" href="{% url 'editar-plan' recurso.id %}"><i class="ion-ios-list-box icon-small"></i>Editar descripción</a>
   </div>
   <div class="col-md-2">
-    <a class="btnn btn-full" href="{% url 'eliminar-plan' recurso.id %}"><i class="ion-md-trash icon-small"></i>Eliminar plan de producción</a>
+    <a class="btnn btn-full" href="#" id="id_eliminar_plan"><i class="ion-md-trash icon-small"></i>Eliminar plan de producción</a>
   </div>
-  <div class="col-md-7">
+  <div class="col-md-2">
     <a class="btnn btn-full" href="{% url 'exportar-plan' recurso.id %}"><i class="ion-ios-list-box icon-small"></i>Exportar a Excel</a>
   </div>
 </div>
+
+{% include "confirmation/delete_plan.html" %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+      <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#id_eliminar_plan').click(function () {
+            $('#tipo_modal').modal();
+        });
+    });
+</script>
 {% endblock %}
