--- a/templates/confirmation/delete_plan.html
+++ b/templates/confirmation/delete_plan.html
@@ -1,12 +1,22 @@
-{% extends 'root.html' %}
-{% block content %}
-<div class="card container mt-3">
-  <div class="card-body">
-    <h3 class="card-title">¿Está seguro que desea eliminar el plan de producción?</h3>
-    <form action="{% url 'eliminar-plan' idPlan=plan.recurso_id %}" method='POST'> {% csrf_token %}
-      <input type="submit" value="Eliminar">
-      <a class="nav-link btnn btn-full" href="{% url 'recursos' %}">Cancelar</a>
-    </form>
-  </div>
+<div class="modal fade" id="tipo_modal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4><span class="glyphicon glyphicon-user"></span>¿Está seguro de eliminar el plan de producción?</h4>
+            </div>
+            <!--suppress HtmlUnknoid_crear_tipownTarget -->
+            <form role="form" action="{% url 'eliminar-plan' idPlan=plan.recurso_id %}" method="post" enctype="multipart/form-data" novalidate="novalidate">
+                {% csrf_token %}
+                <div class="modal-footer btn-toolbar">
+                    <button type="submit" class="btn-b btn-bf pull-right">
+                        <span class="glyphicon glyphicon-save"></span> Eliminar
+                    </button>
+                    <button type="submit" class="btn-b btn-bg pull-right" data-dismiss="modal"
+                            style="margin-left: 5px">
+                        <span class="glyphicon glyphicon-remove"></span> Cancelar
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
-{% endblock %}
