--- a/templates/SGRD/planProduccion.html
+++ b/templates/SGRD/planProduccion.html
@@ -48,7 +48,9 @@
             <td>{{ e.personas }}</td>
             <td>{{ e.equipos }}</td>
             <td>{{ e.descripcion }}</td>
-            <td>{{ e.observaciones }} <a class="btnn btn-full float-right" href="{% url 'editar-entrada' e.id %}">Editar</a></td>
+            <td>{{ e.observaciones }}</td>
+            <td><a class="btnn btn-full float-right" href="{% url 'editar-entrada' e.id %}">Editar</a>
+                <a class="btnn btn-full float-right" href="#" id='id_eliminar_entrada'>Eliminar</a></td>
           </tr>
           {% endfor %}
         </tbody>
@@ -80,6 +82,17 @@
 <script>
     $(document).ready(function () {
         $('#id_eliminar_plan').click(function () {
+            $('#tipo_modal').modal();
+        });
+    });
+</script
+
+{% include "confirmation/delete_entrada.html" %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+      <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#id_eliminar_entrada').click(function () {
             $('#tipo_modal').modal();
         });
     });
