Ajustes funcionalidad eliminar entrada

--- a/templates/SGRD/planProduccion.html
+++ b/templates/SGRD/planProduccion.html
@@ -39,6 +39,7 @@
           <th>Equipos</th>
           <th>Descripcion</th>
           <th>Observaciones</th>
+          <th>Opciones</th>
         </thead>
         <tbody>
           {% for e in values %}
@@ -50,7 +51,9 @@
             <td>{{ e.descripcion }}</td>
             <td>{{ e.observaciones }}</td>
             <td><a class="btnn btn-full float-right" href="{% url 'editar-entrada' e.id %}">Editar</a>
-                <a class="btnn btn-full float-right" href="#" id='id_eliminar_entrada'>Eliminar</a></td>
+                <!--<a class="btnn btn-full float-right" href="#" id="id_eliminar_entrada">Eliminar</a>-->
+                <a class="btnn btn-full float-right" href="{% url 'eliminar-entrada' e.id %}" id="id_eliminar_entrada">Eliminar</a>
+            </td>
           </tr>
           {% endfor %}
         </tbody>
@@ -77,23 +80,19 @@
 </div>
 
 {% include "confirmation/delete_plan.html" %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-      <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $('#id_eliminar_plan').click(function () {
-            $('#tipo_modal').modal();
-        });
-    });
-</script
-
 {% include "confirmation/delete_entrada.html" %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
       <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
 <script>
     $(document).ready(function () {
+        $('#id_eliminar_plan').click(function () {
+            $('#tipo_modal1').modal();
+        });
+    });
+
+    $(document).ready(function () {
         $('#id_eliminar_entrada').click(function () {
-            $('#tipo_modal').modal();
+            $('#tipo_modal2').modal();
         });
     });
 </script>
