--- a/templates/confirmation/delete_entrada.html
+++ b/templates/confirmation/delete_entrada.html
@@ -5,7 +5,7 @@
                 <h4><span class="glyphicon glyphicon-user"></span>¿Está seguro de eliminar esta entrada?</h4>
             </div>
             <!--suppress HtmlUnknoid_crear_tipownTarget -->
-            <form role="form" action="{% url 'eliminar-entrada' idEntrada=18 %}"  id="delete-entrada" method="post" enctype="multipart/form-data" novalidate="novalidate">
+            <form role="form" action="{% url 'eliminar-entrada' idEntrada=entrada.id %}"  id="delete-entrada" method="post" enctype="multipart/form-data" novalidate="novalidate">
                 {% csrf_token %}
                 <div class="modal-footer btn-toolbar">
                     <button type="submit" class="btn-b btn-bf pull-right">
