--- a/templates/confirmation/delete_entrada.html
+++ b/templates/confirmation/delete_entrada.html
@@ -5,10 +5,10 @@
                 <h4><span class="glyphicon glyphicon-user"></span>¿Está seguro de eliminar esta entrada?</h4>
             </div>
             <!--suppress HtmlUnknoid_crear_tipownTarget -->
-            <form role="form" action="{% url 'eliminar-entrada' idEntrada=entrada.id %}"  id="delete-entrada" method="post" enctype="multipart/form-data" novalidate="novalidate">
+            <form role="form" id="delete-entrada" novalidate="novalidate">
                 {% csrf_token %}
                 <div class="modal-footer btn-toolbar">
-                    <button type="submit" class="btn-b btn-bf pull-right">
+                    <button type="submit" onclick="eliminarEntrada2()" class="btn-b btn-bf pull-right">
                         <span class="glyphicon glyphicon-save"></span> Eliminar
                     </button>
                     <button type="submit" class="btn-b btn-bg pull-right" data-dismiss="modal"
