--- a/templates/SGRD/recurso_detail.html
+++ b/templates/SGRD/recurso_detail.html
@@ -85,11 +85,10 @@
                     </p>
                    <p id="id_links">
                    {% if produccion_terminada %}
-                     <a href="{% url 'create-archivo' recurso.id %}">Cargar producto final</a>
+                     <a href="{% url 'create-archivo' recurso.id 1 %}">Cargar producto final</a>
                    {% else %}
-                     <a href="{% url 'create-archivo' recurso.id %}">Cargar producto final</a>
+                     <a href="{% url 'create-archivo' recurso.id 0 %}">Adjuntar Archivo</a>
                    {%  endif %}
-                   | <a href="{% url 'create-archivo' recurso.id %}">Adjuntar Archivo</a>
                    {% if not hay_plan %}
                    | <a href="{% url 'crear-plan' recurso.id %}">Crear plan</a>
                    {% else %}
