--- a/templates/SGRD/recurso_list.html
+++ b/templates/SGRD/recurso_list.html
@@ -10,7 +10,7 @@
       {% if not recurso_list %}
       <h3 class="text-center">No tienes recursos registrados.</h3>
     {% else %}
-    {% for recurso in recurso_list|dictsort:"inicio_produccion" reversed%}
+    {% for recurso in recurso_list|dictsortreversed:"id" %}
       <div class="row mt-3">
         <div class="card w-100">
             <div class="card-body">
@@ -32,7 +32,7 @@
                 </div>
                    <p>
                     <a href="{% url 'recurso' recurso.id %}">Detalle</a>
-                  | <a href="{% url 'create-archivo' recurso.id %}">Adjuntar Archivo</a>
+                  | <a href="{% url 'create-archivo' recurso.id 0 %}">Adjuntar Archivo</a>
                     </p>
               </div>
 
