--- a/templates/SGRD/busqueda.html
+++ b/templates/SGRD/busqueda.html
@@ -52,10 +52,10 @@
                         <div class="row">
                           <h5>Etiquetas:</h5>
                         </div>
-                        <div class="row">
+                        <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 1vw; margin-bottom: 2vh;">
                           {% for tag in recurso.etiquetas_list %}
-                          <div class="col-md-4 card recursoTag" style="margin: 1vw; border: 2px solid {{tag.color}}; border-radius: 10px; background-color: {{tag.color}}; width: auto; height: auto; margin-right: 1px;">
-                            <div class="card-body text-center etiqueta-item" style="color: #FFF;">
+                          <div class="recursoTag" style="border: 2px solid {{tag.color}}; background-color: {{tag.color}}; border-radius: 10px; height: 40px;">
+                            <div class="text-center etiqueta-item" style="color: #FFF; font-weight: 400; width: 100%;">
                               {{tag.nombre}}
                             </div>
                           </div>
