--- a/templates/root.html
+++ b/templates/root.html
@@ -28,7 +28,7 @@
       <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
       <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
       <script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
-      <script src="{% static 'js/busqueda.js' %}"></script>
+      {% include 'scripts/appScripts.html' %}
       <script src="https://vjs.zencdn.net/7.0/video.min.js"></script>
   </body>
 </html>
