--- a/templates/SGRD/busqueda.html
+++ b/templates/SGRD/busqueda.html
@@ -85,7 +85,7 @@
                   <div class="col-md-12">
                     <div class="row">
                       <div class="col-md-6 mx-auto">
-                        <p><b>Recusro: </b>{{clip.archivo.recurso.nombre}}</p>
+                        <p><b>Recurso: </b>{{clip.archivo.recurso.nombre}}</p>
                       </div>
                       <div class="col-md-6 mx-auto">
                         <p><b>Archivo: </b>{{clip.archivo.nombre}}</p>
