--- a/templates/forms/editar-descargar-archivo-form.html
+++ b/templates/forms/editar-descargar-archivo-form.html
@@ -1,6 +1,6 @@
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <form role="form" action="{% url 'descargar-archivo' id_recurso id_archivo %}" method="post">
+        <form role="form" action="{% url 'editar-descargar-archivo' id_recurso id_archivo %}" method="post">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">x</button>
             <h3>Planear descarga</h3>
