--- a/templates/scripts/appScripts.html
+++ b/templates/scripts/appScripts.html
@@ -10,8 +10,21 @@
       data: {},
       dataType: 'json',
       success: function (data) {
-        console.log(data);
+        downloads = data['downloads']
+        for (var i = 0; i < downloads.length; i++) {
+          console.log("Iniciando descarga de archivo.");
+          downloadURI(downloads[0]['uri'], downloads[0]['name']);
+        }
       }
     });
-  }, 1000);
+  }, 5000);
+
+  function downloadURI(uri, name) {
+    var a = document.createElement('A');
+    a.href = uri;
+    a.download = name;
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+  }
 </script>
