--- a/templates/SGRD/busqueda.html
+++ b/templates/SGRD/busqueda.html
@@ -2,29 +2,33 @@
 {% block content %}
 <div class="searchPage">
   <div class="row mt-3">
-    <div class="card container">
+    <div class="col-md-3 card container" style="height: 100%;">
+      <div class="card-body">
+        <h3 class="card-title">Filtros</h3>
+        <form class="searchForm" action="{% url 'busqueda' %}" method="GET">
+          <div class="row">
+            <label class="col-md-5 text-center" for="types">Tipo:</label>
+            <select class="typeSelect col-md-7" name="types">
+              <option value="-1" {% if searchParams.type == -1 %} selected {% endif %}>Todos</option>
+              {% for type in types %}
+              <option value="{{type.id}}" {% if searchParams.type == type.id %} selected {% endif %}>{{type.nombre}}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="row">
+            <label class="col-md-5 text-center" for="tags">Etiquetas:</label>
+            <select class="tagsSelect col-md-7" name="tags" multiple="multiple">
+              {% for tag in tags %}
+              <option value="{{tag.id}}" {% if tag.id|stringformat:"i" in searchParams.tags %} selected {% endif %}>{{tag.nombre}}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <input type="submit" class="btn btn-primary btn-block w-25" value="Buscar" style="margin: 1vh 0vw;">
+        </form>
+      </div>
+    </div>
+    <div class="col-md-8 card container">
         <div class="card-body">
-          <h3 class="card-title">Buscar</h3>
-          <form class="searchForm" action="{% url 'busqueda' %}" method="GET">
-            <div class="row">
-              <label class="col-md-2 text-center" for="types">Tipo:</label>
-              <select class="typeSelect col-md-10" name="types">
-                <option value="-1" {% if searchParams.type == -1 %} selected {% endif %}>Todos</option>
-                {% for type in types %}
-                <option value="{{type.id}}" {% if searchParams.type == type.id %} selected {% endif %}>{{type.nombre}}</option>
-                {% endfor %}
-              </select>
-            </div>
-            <div class="row">
-              <label class="col-md-2 text-center" for="tags">Etiquetas:</label>
-              <select class="tagsSelect col-md-10" name="tags" multiple="multiple">
-                {% for tag in tags %}
-                <option value="{{tag.id}}" {% if tag.id|stringformat:"i" in searchParams.tags %} selected {% endif %}>{{tag.nombre}}</option>
-                {% endfor %}
-              </select>
-            </div>
-            <input type="submit" class="btn btn-primary btn-block w-25" value="Buscar" style="margin: 1vh 0vw;">
-          </form>
           <div id="searchResult" >
             {% if recursos|length > 0 %}
             <h3 class="card-title">Recursos</h3>
