--- a/templates/header.html
+++ b/templates/header.html
@@ -1,35 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light navu" >
 <img src="{% static 'img/logo-1.png' %}" class="logou">
-<div class="container">
-  <a class="navbar-brand" href="#">SGRD</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ned" aria-controls="ned" aria-expanded="false">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="ned">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link btnn btn-full" href="{% url 'recursos' %}"><i class="ion-ios-videocam icon-small"></i>Recursos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btnn btn-full" href="{% url 'busqueda' %}"><i class="ion-ios-search icon-small"></i>Buscar</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav">
-      {% if not request.user.is_authenticated %}
-      <li class="nav-item">
-        <a class="nav-link btnn btn-full" href="#">
-          <i class="ion-ios-person icon-small"></i>Acceder
-        </a>
-      </li>
-      {% else %}
-      <li class="nav-item">
-        <a class="nav-link btnn btn-full" href="#">
-          <i class="ion-ios-power icon-small"></i>Salir
-        </a>
-      </li>
-      {% endif %}
-    </ul>
-  </div>
+<div class="container ml-1">
+  <a class="navbar-brand" href="{% url 'index' %}">SGRD</a>
 </div>
 </nav>
